--- a/openfisca_barcelona/tests/benefits/EG-233.yaml
+++ b/openfisca_barcelona/tests/benefits/EG-233.yaml
@@ -1,5 +1,5 @@
 - name: "Persona amb tots els condicionants i nivell de renda extraordinari reb l'ajuda extraordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -25,17 +25,84 @@
      grau_discapacitat: 0
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     en_guardia_i_custodia: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
+     tipus_custodia: "total"
      ingressos_bruts: 144
      grau_discapacitat: 0
      en_acolliment: false
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 6 ]
 
+- name: "Persona amb tots els condicionants i nivell de renda extraordinari reb l'ajuda extraordinaria, custodia compartida rep l'ajuda"
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
+  period: 2017-01
+  absolute_error_margin: false
+  families:
+     adults: ["adult1", "adult2"]
+     altres_adults: ["adult3"]
+     menors: ["menor1"]
+     nivell_de_risc_d_exclusio_social: Greu
+     tipus_familia_monoparental: No
+     tipus_familia_nombrosa: No
+     volum_del_negoci_familiar: 0
+     rendiments_del_patrimoni: 0
+     valor_cadastral_finques_rustiques: 0
+     valor_cadastral_finques_urbanes: 0
+  persones:
+   - id: "adult1"
+     ingressos_bruts: 482
+     grau_discapacitat: 0
+   - id: "adult2"
+     ingressos_bruts: 240
+     grau_discapacitat: 0
+   - id: "adult3"
+     ingressos_bruts: 119
+     grau_discapacitat: 0
+   - id: "menor1"
+     es_escolaritzat_entre_P3_i_4rt_ESO: true
+     tipus_custodia: "Compartida"
+     ingressos_bruts: 144
+     grau_discapacitat: 0
+     en_acolliment: false
+  output_variables:
+    EG_233_mensual: [ 0, 0, 0, 6 ]
+
+
+- name: "Persona amb tots els condicionants i nivell de renda extraordinari reb l'ajuda extraordinaria, sense custodia no té ajut"
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
+  period: 2017-01
+  absolute_error_margin: false
+  families:
+     adults: ["adult1", "adult2"]
+     altres_adults: ["adult3"]
+     menors: ["menor1"]
+     nivell_de_risc_d_exclusio_social: Greu
+     tipus_familia_monoparental: No
+     tipus_familia_nombrosa: No
+     volum_del_negoci_familiar: 0
+     rendiments_del_patrimoni: 0
+     valor_cadastral_finques_rustiques: 0
+     valor_cadastral_finques_urbanes: 0
+  persones:
+   - id: "adult1"
+     ingressos_bruts: 482
+     grau_discapacitat: 0
+   - id: "adult2"
+     ingressos_bruts: 240
+     grau_discapacitat: 0
+   - id: "adult3"
+     ingressos_bruts: 119
+     grau_discapacitat: 0
+   - id: "menor1"
+     es_escolaritzat_entre_P3_i_4rt_ESO: true
+     tipus_custodia: "cap"
+     ingressos_bruts: 144
+     grau_discapacitat: 0
+     en_acolliment: false
+  output_variables:
+    EG_233_mensual: [ 0, 0, 0, 0 ]
+
 - name: "Persona amb tots els condicionants i nivell de renda ordinari reb l'ajuda ordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -51,15 +118,13 @@
      ingressos_bruts: 200
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 240
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 3 ]
 
 - name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari no reb l'ajuda ordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -75,16 +140,14 @@
      ingressos_bruts: 200
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 240
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
 
 - name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari no reb l'ajuda ordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -100,15 +163,13 @@
      ingressos_bruts: 200
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 240
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
 - name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari no reb l'ajuda ordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -124,15 +185,13 @@
      ingressos_bruts: 300
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 240
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
 - name: "Persona amb tots els condicionants i nivell de renda superior a l'ordinari no reb l'ajuda ordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -148,15 +207,13 @@
      ingressos_bruts: 200
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 340
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
 - name: "Persona amb tots els condicionants menys escolarització i nivell de renda ordinari no reb l'ajuda ordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -172,15 +229,13 @@
      ingressos_bruts: 200
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: false
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 240
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
-- name: "Persona amb tots els condicionants menys utilitza_el_servei_de_menjador i nivell de renda ordinari no reb l'ajuda ordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+- name: "Persona amb tots els condicionants menys custodia i nivell de renda ordinari no reb l'ajuda ordinaria"
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -196,66 +251,14 @@
      ingressos_bruts: 200
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: false
-     te_beca_menjador: false
      ingressos_bruts: 240
-     en_guardia_i_custodia: true
-  output_variables:
-    EG_233_mensual: [ 0, 0, 0, 0 ]
-
-
-- name: "Persona amb tots els condicionants però amb una beca utilitza_el_servei_de_menjador i nivell de renda ordinari no reb l'ajuda ordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
-  period: 2017-01
-  absolute_error_margin: false
-  families:
-     adults: ["adult1", "adult2"]
-     altres_adults: ["adult3"]
-     menors: ["menor1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts: 804
-   - id: "adult2"
-     ingressos_bruts: 401
-   - id: "adult3"
-     ingressos_bruts: 200
-   - id: "menor1"
-     es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: true
-     ingressos_bruts: 240
-     en_guardia_i_custodia: true
+     tipus_custodia: "cap"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
 
 - name: "Persona amb tots els condicionants menys custodia i nivell de renda ordinari no reb l'ajuda ordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
-  period: 2017-01
-  absolute_error_margin: false
-  families:
-     adults: ["adult1", "adult2"]
-     altres_adults: ["adult3"]
-     menors: ["menor1"]
-  persones:
-   - id: "adult1"
-     ingressos_bruts: 804
-   - id: "adult2"
-     ingressos_bruts: 401
-   - id: "adult3"
-     ingressos_bruts: 200
-   - id: "menor1"
-     es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
-     ingressos_bruts: 240
-     en_guardia_i_custodia: false
-  output_variables:
-    EG_233_mensual: [ 0, 0, 0, 0 ]
-
-
-- name: "Persona amb tots els condicionants menys custodia i nivell de renda ordinari no reb l'ajuda ordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -272,16 +275,14 @@
      ingressos_bruts: 200
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 240
-     en_guardia_i_custodia: false
+     tipus_custodia: "cap"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 0 ]
 
 
 - name: "Familia amb volum de negoci superior al limit NO reb l'ajuda extraordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -308,18 +309,16 @@
      grau_discapacitat: 0
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 144
      grau_discapacitat: 0
      en_acolliment: false
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 3 ]
 
 
 - name: "Familia amb rendiments patrimonials superiors al llindar NO reb l'ajuda extraordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -346,17 +345,15 @@
      grau_discapacitat: 0
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 144
      grau_discapacitat: 0
      en_acolliment: false
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 3 ]
 
 - name: "Familia amb valoracions cadastrals rustiques superiors al llindar NO reb l'ajuda extraordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -382,18 +379,16 @@
      grau_discapacitat: 0
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 144
      grau_discapacitat: 0
      en_acolliment: false
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 3 ]
 
 
 - name: "Familia amb valoracions cadastrals urbanes superiors al llindar NO reb l'ajuda extraordinaria"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -419,18 +414,16 @@
      grau_discapacitat: 0
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 144
      grau_discapacitat: 0
      en_acolliment: false
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 0, 0, 3 ]
 
 
 - name: "Familia obté ajut extraordinari per punts família"
-  description: EG_233 - AJUTS INDIVIDUALS DE utilitza_el_servei_de_menjador CIUTAT BARCELONA
+  description: EG_233 - AJUTS INDIVIDUALS DE BEQUES MENJADOR CIUTAT BARCELONA
   period: 2017-01
   absolute_error_margin: false
   families:
@@ -449,19 +442,15 @@
      grau_discapacitat: 0
    - id: "menor1"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 144
      grau_discapacitat: 34
      en_acolliment: true
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
    - id: "menor2"
      es_escolaritzat_entre_P3_i_4rt_ESO: true
-     utilitza_el_servei_de_menjador: true
-     te_beca_menjador: false
      ingressos_bruts: 144
      grau_discapacitat: 34
      en_acolliment: false
-     en_guardia_i_custodia: true
+     tipus_custodia: "total"
   output_variables:
     EG_233_mensual: [ 0, 6, 6 ]
