Handle monoparental and shared custody cases

--- a/openfisca_barcelona/tests/benefits/AE-230.yaml
+++ b/openfisca_barcelona/tests/benefits/AE-230.yaml
@@ -3,46 +3,28 @@
   period: 2017-01
   absolute_error_margin: 0
   families:
-    adults: ["pare1"]
+    adults: ["pare1", "mare1"]
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
-    data_obertura_expedient_serveis_socials: 2016-12-30
   persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
      ingressos_bruts: 7000
      ciutat_empadronament: "Barcelona"
      data_alta_padro: '2015-12-31'
+   - id: "mare1"
+     data_naixement: '1961-01-15'
+     ingressos_bruts: 0000
+     ciutat_empadronament: "Barcelona"
+     data_alta_padro: '2015-12-31'
    - id: "infant1"
      data_naixement: '2002-01-15'
      ingressos_bruts: 0
      data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 100]
-
-- name: "0-16 Unitat familiar 2 membres nivell renda disponible inferior a 1,5 IRSC amb expedient a SS posterior a 31-12-16"
-  description: Ajuda menors 0-16
-  period: 2017-01
-  absolute_error_margin: 0
-  families:
-    adults: ["pare1"]
-    menors: ["infant1"]
-    domicili_a_barcelona_ciutat: true
-    es_usuari_serveis_socials: true
-    data_obertura_expedient_serveis_socials: 2017-01-01
-  persones:
-   - id: "pare1"
-     data_naixement: '1961-01-15'
-     ingressos_bruts: 7000
-     ciutat_empadronament: "Barcelona"
-     data_alta_padro: '2015-12-31'
-   - id: "infant1"
-     data_naixement: '2002-01-15'
-     ingressos_bruts: 0
-     data_alta_padro: '2015-12-31'
-  output_variables:
-    AE_230_mensual: [ 0, 0]
 
 - name: "0-16 Unitat familiar 2 membres nivell renda disponible inferior a 1,5 IRSC, data alta padró posterior a 01-01-16"
   description: Ajuda menors 0-16
@@ -53,7 +35,6 @@
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
-    data_obertura_expedient_serveis_socials: 2016-12-30
   persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
@@ -64,6 +45,7 @@
      data_naixement: '2002-01-15'
      ingressos_bruts: 0
      data_alta_padro: '2016-1-2'
+     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 0]
 
@@ -76,7 +58,6 @@
     menors: ["infant1", "infant2"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
-    data_obertura_expedient_serveis_socials: 2016-12-30
   persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
@@ -88,10 +69,12 @@
      ingressos_bruts: 0
      ciutat_empadronament: "Barcelona"
      data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
    - id: "infant2"
      data_naixement: '2002-01-15'
      ingressos_bruts: 0
      data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 100, 100]
 
@@ -104,7 +87,6 @@
     menors: ["infant1", "infant2"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
-    data_obertura_expedient_serveis_socials: 2016-12-30
   persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
@@ -116,10 +98,12 @@
      ingressos_bruts: 0
      ciutat_empadronament: "Barcelona"
      data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
    - id: "infant2"
      data_naixement: '2002-01-15'
      ingressos_bruts: 0
      data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 0, 0]
 
@@ -132,7 +116,6 @@
     menors: ["infant1", "infant2"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
-    data_obertura_expedient_serveis_socials: 2016-12-30
   persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
@@ -146,10 +129,12 @@
      data_naixement: '2002-01-15'
      ingressos_bruts: 0
      data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
    - id: "infant2"
      data_naixement: '2002-01-15'
      ingressos_bruts: 0
      data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 0, 0, 0]
 
@@ -162,7 +147,6 @@
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
-    data_obertura_expedient_serveis_socials: 2016-12-30
   persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
@@ -173,6 +157,7 @@
      data_naixement: '2000-01-15'
      ingressos_bruts: 0
      data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [0, 0]
 
@@ -185,7 +170,6 @@
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: false
     es_usuari_serveis_socials: true
-    data_obertura_expedient_serveis_socials: 2016-12-30
   persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
@@ -196,6 +180,7 @@
      data_naixement: '2002-01-15'
      ingressos_bruts: 0
      data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 0]
 
@@ -208,7 +193,6 @@
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
-    data_obertura_expedient_serveis_socials: 2016-12-30
   persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
@@ -219,5 +203,31 @@
      data_naixement: '2002-01-15'
      ingressos_bruts: 0
      data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
   output_variables:
     AE_230_mensual: [ 0, 0]
+
+
+- name: "0-16 Unitat familiar 2 membres nivell renda disponible inferior a 1,5 IRSC"
+  description: Ajuda menors 0-16
+  period: 2017-01
+  absolute_error_margin: 0
+  families:
+    adults: ["pare1"]
+    menors: ["infant1"]
+    domicili_a_barcelona_ciutat: true
+    es_usuari_serveis_socials: true
+    tipus_familia_monoparental: 'General'
+  persones:
+   - id: "pare1"
+     data_naixement: '1961-01-15'
+     ingressos_bruts: 7000
+     ciutat_empadronament: "Barcelona"
+     data_alta_padro: '2015-12-31'
+   - id: "infant1"
+     data_naixement: '2002-01-15'
+     ingressos_bruts: 0
+     data_alta_padro: '2015-12-31'
+     tipus_custodia: 'total'
+  output_variables:
+    AE_230_mensual: [ 0, 100]
