If a child is born after 2016-01-01 benefit is given without taking into account city register inscription date

--- a/openfisca_barcelona/tests/benefits/AE-230.yaml
+++ b/openfisca_barcelona/tests/benefits/AE-230.yaml
@@ -26,6 +26,34 @@
   output_variables:
     AE_230_mensual: [ 0, 0, 100]
 
+- name: "0-16 Unitat familiar 2 membres nivell renda disponible inferior a 1,5 IRSC fill nascut després de 2016-01-01"
+  description: Ajuda menors 0-16
+  period: 2017-01
+  absolute_error_margin: 0
+  families:
+    adults: ["pare1", "mare1"]
+    menors: ["infant1"]
+    domicili_a_barcelona_ciutat: true
+    es_usuari_serveis_socials: true
+  persones:
+   - id: "pare1"
+     data_naixement: '1961-01-15'
+     ingressos_bruts: 7000
+     ciutat_empadronament: "Barcelona"
+     data_alta_padro: '2015-12-31'
+   - id: "mare1"
+     data_naixement: '1961-01-15'
+     ingressos_bruts: 0000
+     ciutat_empadronament: "Barcelona"
+     data_alta_padro: '2015-12-31'
+   - id: "infant1"
+     data_naixement: '2016-01-15'
+     ingressos_bruts: 0
+     data_alta_padro: '2016-01-20'
+     tipus_custodia: 'total'
+  output_variables:
+    AE_230_mensual: [ 0, 0, 100]
+
 - name: "0-16 Unitat familiar 2 membres nivell renda disponible inferior a 1,5 IRSC, data alta padró posterior a 01-01-16"
   description: Ajuda menors 0-16
   period: 2017-01
