--- a/openfisca_barcelona/tests/benefits/AE-230-1.yaml
+++ b/openfisca_barcelona/tests/benefits/AE-230-1.yaml
@@ -20,6 +20,7 @@
      data_alta_padro: '2015-12-31'
      tipus_custodia: 'compartida'
   output_variables:
+    AE_230_mensual: [ 0, 50]
     AE_230_01_mensual: [ 0, 900]
 
 
@@ -45,4 +46,36 @@
      data_alta_padro: '2015-12-31'
      tipus_custodia: 'total'
   output_variables:
+    AE_230_mensual: [ 0, 100]
     AE_230_01_mensual: [ 0, 900]
+
+
+- name: "0-16 Unitat familiar 2 membres nivell renda disponible inferior a 1,5 IRSC"
+  description: Ajuda menors 0-16
+  period: 2017-01
+  absolute_error_margin: 0
+  families:
+    adults: ["pare1", "pare2"]
+    menors: ["infant1"]
+    domicili_a_barcelona_ciutat: true
+    es_usuari_serveis_socials: true
+    tipus_familia_monoparental: 'No'
+  persones:
+    - id: "pare1"
+      data_naixement: '1961-01-15'
+      ingressos_bruts: 7000
+      ciutat_empadronament: "Barcelona"
+      data_alta_padro: '2016-1-2'
+    - id: "pare2"
+      data_naixement: '1961-01-15'
+      ingressos_bruts: 7000
+      ciutat_empadronament: "Barcelona"
+      data_alta_padro: '2016-1-2'
+    - id: "infant1"
+      data_naixement: '2002-01-15'
+      ingressos_bruts: 0
+      data_alta_padro: '2015-12-31'
+      tipus_custodia: 'total'
+  output_variables:
+    AE_230_mensual: [ 0, 0, 100]
+    AE_230_01_mensual: [ 0, 0, 0]
